Add field type to the item
